	* Fix matching unicode smilies.  (#17232 gnubfx PR #262 Daniel Kamil Kozar)
	* Correctly update mute/unmute status when the remote side mutes/unmutes us. (#17273 PR #302 David Woodhouse)
	* Rework the status icon blinking to not used deprecated API.  (#17174 zelch PR #264 Daniel Kamil Kozar)

	Finch:
	* Fix handling of search results (#17238 David Woodhouse)

version 2.12.0 (03/09/2017):
	libpurple:
	* Fix an out of bounds memory write in purple_markup_unescape_entity.
	  CVE-2017-2640
	* Fix use of uninitialised memory if running non-debug-enabled versions of glib
	* Updated AIM dev and dist ID's to new ones that were assigned by AOL.
	* TLS certificate verification now uses SHA-256 checksums.
	* Fixed SASL external auth for Freenode.
	* Removed the MSN protocol plugin. It has been unusable and dormant for some
	  time. MSNP18 has been discontinued and the protocol plugin would require a
	  large update to start working again. See: http://ismsndeadyet.com/ The
	  third-party Pidgin SkypeWeb plugin, however, should provide enough
	  functionality as a replacement if people still want to use MSN:
	  https://github.com/EionRobb/skype4pidgin/tree/master/skypeweb
	* Removed Mxit protocol plugin. The service was closed at the end of
	  September 2016. See
	  https://pidgin.im/pipermail/devel/2016-September/024078.htm
	* Removed the MySpaceIM protocol plugin. The service has been defunct for a
	  long time. (#15356)
	* Remove the Yahoo! protocol plugin. Yahoo has completely
	  reimplemented their protocol, so this version is no longer operable as
	  of August 5th, 2016:
	  https://yahoo.tumblr.com/post/145715934739/q2-2016-progress-report-on-our-product
	  A new protocol plugin has been written to support the new protocol.
	  It can be found here: https://github.com/EionRobb/funyahoo-plusplus
	  This also removes support for Yahoo! Japan. According to
	  http://messenger.yahoo.co.jp/ the service ended March 26th, 2014.